2015-05-28  Daniel Hawkins
	* server/player.c: Tweak the starvation calculation to not use a loop.
	  Tweak the similar_direction calculation to use modulus instead of 
	  a switch statement.

2015-05-25  Daniel Hawkins
	* configure.ac: Made the configure script exit if lex and flex are not found.
	* utils/cfarches.xsl: Refactored can_use_xxx to be displayed in a single
	  cell. Also completed the set of can_use_xxx options.
	  Added XSL Transformation output for body slots.

2015-05-24  Daniel Hawkins
	* common/living.c: Fixed a bug in which the player's experience would
	  endlessly loop in the level below maxlevel.

2015-05-22	Daniel Hawkins
	* utils/cfarches.xsl: Refactored resistances to be displayed in a single
	  cell for each arch. Also added the rest of the resistances to the
	  XSL transformation.
	  Added attacktype to the generated HTML table.
	  Added plural names to the name display.

2015-05-21	Daniel Hawkins
	* utils/arch2xml.py: Tweaked whitespace of tag output.
	  Then added HTML/XML escapes for &, <, and > inside comments and messages.
	  Fixed the arch tag writing mechanism to give each object its own arch
	   instead of each file getting its own arch tag.
	  Made empty comment lines be ignored instead of printed as [#].
	* utils/cfarches.xsl: Adjusted headings to be actual HTML table headings.

2015-05-20	Daniel Hawkins
	* lib/artifacts: Adjusted several item messages for clarity and grammar.
	* server/c_object.c: Don't show item story (msg) unless it has been
    identified.

2015-05-19	Daniel Hawkins (SilverNexus)
	* test/toolkit/toolkit_crossedit.c: Retired old crossedit test toolkit.
	It was never implemented, and crossedit has been gone for years.

2015-05-16	Daniel Hawkins (SilverNexus)
	* utils/scores.pl.in: Made experience table be dynamically
	read in from the server's installed exp_table file.

2015-05-15	Daniel Hawkins (SilverNexus)
	* random_maps/special.c: Fix fountain material to prevent fountains