@@ -1,3 +1,7 @@
+2015-05-31  Daniel Hawkins
+	* common/living.c: Fixed a bug introduced in r19972 that made skill
+	  experience based off total level instead of skill level.
+
 2015-05-28  Daniel Hawkins
 	* server/player.c: Tweak the starvation calculation to not use a loop.
 	  Tweak the similar_direction calculation to use modulus instead of 
